@@ -1,3 +1,8 @@
+== In Git
+
+=== Changed Features
+* The JSON schema now puts background inside the "elements" Array. Makes parsing simpler. (Aslak Hellesøy)
+
 == 2.1.4 (2010-07-14)
 
 === Bugfixes
